test/syc/bad/enumempty.c
/*
 * Enum 'e' is empty.
 */

enum e {
};
